Fix issue with alternative listbox items not showing hover styles

--- a/src/css/_ui.scss
+++ b/src/css/_ui.scss
@@ -182,7 +182,7 @@ input[type="number"]::-webkit-outer-spin-button {
 
 .ui-listbox {
 	.item:hover {
-		background: var(--font-alt);
+		background: var(--font-alt) !important;
 	}
 }
 
